# e8_dash_app

./: .gitignore  README.md  e8_app.py  pyproject.toml  setup.py  test_app.py
e8_dash_app/: __init__.py
e8_dash_app/assets/js/: script.js
ext_assets/css/: _normalize.css  epoch8.css  style.css
