[tool.poetry]
name = "e8_dash_app"
version = "0.2.0"
description = ""
authors = ["Andrey Tatarinov <a@tatarinov.co>"]

[tool.poetry.dependencies]
python = "^3.6"
dash = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
setuptools_scm = "^3.5.0"

[tool.setuptools_scm]

[build-system]
requires = ["poetry>=0.12", "setuptools_scm[toml]>=3.4"]
build-backend = "poetry.masonry.api"
